--- a/playbooks/work-entertainment-utils.yml
+++ b/playbooks/work-entertainment-utils.yml
@@ -12,3 +12,17 @@
         name:
           - pcmanx-gtk2
         update_cache: yes
+
+    # sudo apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv-keys BBEBDCB318AD50EC6865090613B00F1FD2C19886
+    - name: Add Spotify apt-key
+      apt_key:
+        keyserver: hkp://keyserver.ubuntu.com:80
+        id: BBEBDCB318AD50EC6865090613B00F1FD2C19886
+
+    # sudo add-apt-repository "deb http://repository.spotify.com stable non-free"
+    - name: Add Spotify apt-repository
+      apt_repository:
+        repo: deb http://repository.spotify.com stable non-free
+
+    - name: Install Spotify
+      apt: name=spotify-client update_cache=yes
