--- a/playbooks/work-misc-utils.yml
+++ b/playbooks/work-misc-utils.yml
@@ -1,6 +1,7 @@
+---
 # Installation Packages
 # shutter: Screen Capture
----
+# Dropbox
 #
 # Execute command:
 # ansible-playbook work-misc-utils.yml -vvv --ask-sudo-pass
@@ -11,3 +12,11 @@
   tasks:
     - name: Install screen capture packages
       apt: name=shutter update_cache=yes
+
+    - name: Install Dropbox
+      # cd ~ && wget -O - "https://www.dropbox.com/download?plat=lnx.x86_64" | tar xzf -
+      unarchive:
+        src: https://www.dropbox.com/download?plat=lnx.x86_64
+        dest: ~/
+        remote_src: True
+      become_user: nonnn
