Add tree, htop packages

--- a/playbooks/work-base-utils.yml
+++ b/playbooks/work-base-utils.yml
@@ -13,4 +13,6 @@
           - build-essential
           - vim
           - stow # stow is local built package management
+          - tree
+          - htop
         update_cache: yes
