tweak-ubuntu: Install Chinese input method

--- a/playbooks/work-tweak-ubuntu.yml
+++ b/playbooks/work-tweak-ubuntu.yml
@@ -22,3 +22,10 @@
           - fonts-arphic-uming
           - fonts-droid-fallback
         update_cache: yes
+
+    - name: Install Chinese input
+      apt:
+        name:
+          - fcitx
+          - fcitx-table-boshiamy
+        update_cache: yes
