tweak-ubuntu: Sync. google drive
* Install gnome-control-center, gnome-online-account

* Manual Steps:
  gnome-control-center -> online accounts -> Add account Google

--- a/playbooks/work-tweak-ubuntu.yml
+++ b/playbooks/work-tweak-ubuntu.yml
@@ -36,3 +36,12 @@
           - fcitx
           - fcitx-table-boshiamy
         update_cache: yes
+
+    # Manual Steps:
+    # gnome-control-center -> online accounts -> Add account Google
+    - name: Sync. with Google Drive
+      apt:
+        name:
+          - gnome-control-center
+          - gnome-online-accounts
+        update_cache: yes
