misc: Install Audacity

--- a/playbooks/work-misc-utils.yml
+++ b/playbooks/work-misc-utils.yml
@@ -20,3 +20,6 @@
         dest: ~/
         remote_src: True
       become_user: nonnn
+
+    - name: Install Audacity
+      apt: name=audacity update_cache=yes
