Replace obsolete "sudo" to "become"

--- a/playbooks/work-base-utils.yml
+++ b/playbooks/work-base-utils.yml
@@ -5,7 +5,7 @@
 #
 - name: Setup basic utilities for my work environment
   hosts: x230-i5
-  sudo: True
+  become: true
   tasks:
     - name: Install fundamental packages
       apt:
