--- a/playbooks/work-entertainment-utils.yml
+++ b/playbooks/work-entertainment-utils.yml
@@ -5,7 +5,7 @@
 #
 - name: Setup entertainment utilities for my work environment
   hosts: x230-i5
-  sudo: True
+  become: true
   tasks:
     - name: Install entertainment packages
       apt:
