--- a/playbooks/work-misc-utils.yml
+++ b/playbooks/work-misc-utils.yml
@@ -8,7 +8,7 @@
 #
 - name: Setup miscellaneous utilities for my work environment
   hosts: x230-i5
-  sudo: True
+  become: true
   tasks:
     - name: Install screen capture packages
       apt: name=shutter update_cache=yes
