--- a/playbooks/work-tweak-ubuntu.yml
+++ b/playbooks/work-tweak-ubuntu.yml
@@ -5,7 +5,7 @@
 #
 - name: Tweak Ubuntu for my work environment
   hosts: x230-i5
-  sudo: True
+  become: true
   tasks:
     - name: Adjust Unity HUD size
       command: dbus-launch gsettings set org.compiz.unityshell:/org/compiz/profiles/unity/plugins/unityshell/ icon-size 32
