roles: Install git, git-extras in work-essential

--- a/ansible/roles/work-essential/tasks/main.yml
+++ b/ansible/roles/work-essential/tasks/main.yml
@@ -8,4 +8,6 @@
         - stow # stow is local built package management
         - tree
         - htop
+        - git
+        - git-extras
       update_cache: yes
