skype: Add role to install skype

--- a/ansible/requirements-laptop.yml
+++ b/ansible/requirements-laptop.yml
@@ -4,3 +4,5 @@
 #
 - src: https://github.com/edunonnn/ansible-spotify
   name: edunonnn.spotify
+- src: https://github.com/edunonnn/ansible-role-skypeforlinux
+  name: edunonnn.skypeforlinux
