Add new role to install extra package for laptop

--- a/ansible/playbooks/laptop.yml
+++ b/ansible/playbooks/laptop.yml
@@ -15,5 +15,6 @@
 - hosts: laptop
   become: true
   roles:
+    - role: edunonnn.desktop-extra
     - role: edunonnn.spotify
     - role: edunonnn.skypeforlinux
